--- a/src/main/resources/templates/survey/setsurvey.html
+++ b/src/main/resources/templates/survey/setsurvey.html
@@ -26,8 +26,7 @@
                         <label for="inputGroupSelect01" style="margin-left: 20px; padding-right: 20px;" id="surveytype">Survey
                             Type</label>
                         <select class="custom-select" id="inputGroupSelect01" th:field="*{surveyType}">
-                            <option selected="selected" value="">Choose...</option>
-                            <option value="General Survey">General Survey</option>
+                            <option selected="selected" value="General Survey">General Survey</option>
                             <option value="Close Survey">Close Survey</option>
                             <option value="Open Survey">Open Survey</option>
                         </select>
@@ -35,6 +34,12 @@
                     <div class="form-group">
                         <label for="surveyName" style="margin-left: 20px" id="sname">Survey Name</label>
                         <input type="text" value="" id="surveyName" th:field="*{surveyName}" class="form-control"/>
+                    </div>
+                    <div th:if="${status=='nameExists'}" class="alert alert-danger alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">x</span>
+                        </button>
+                        <p th:text="#{survey.name.exists}"/>
                     </div>
                     <div class="form-group">
                         <label for="surveyDesc" style="margin-left: 20px" id="sdesc">Survey Description</label>
